# Scania-Core

./: CMakeLists.txt  Core.opensdf  Core.sln  README.md
Core/: ._Player.h  ._ReadConfig.h  AmplificationOfBlood.h  AnkleAmputate.h  Archer.h  ArmorBreaker.h  ArmorPut.h  ArrowExplosion.h  ArrowRain.h  ArrowsOfTheMaster.h  Assault.h  AutoLearn.h  Behead.h  Blessing.h  BlessingOfAgility.h  BlessingOfCriticalHit.h  BlessingOfHealth.h  BlessingOfIntelligence.h  BlessingOfStrength.h  BloodSuction.h  Bombing.h  Buffer.h  BuyItemEx.h  CBaseDelete.h  CChar.h  CDBProcess.h  CProtection.h  Calculations.h  Calls.h  CanAttack.h  CastleWarFix.h  Channel.h  Cleaner.h  Collapse.h  CombativeSpirit.h  Command.cpp  Command.h  ConcurrentMap.h  ConcurrentSet.h  ConcurrentVector.h  (+179 more)
Core/Debug/: CL.read.1.tlog  CL.write.1.tlog  Core.lastbuildstate  cl.command.1.tlog  vc100.idb  vc140.idb
Core/Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Core.lastbuildstate
Core/Release/: CL.read.1.tlog  CL.write.1.tlog  Core.exp  Core.lastbuildstate  Core.lib  Core.map  Core.write.1.tlog  Core_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Core/curl/: libcurl_a.lib
Release/: Core.exp  Core.lib  Core.map
